--- a/logohtml/google.html
+++ b/logohtml/google.html
@@ -5,19 +5,15 @@
 <body>
 <center>
 <header>
-<a href=""><img src="https://lh4.googleusercontent.com/-zPIR8GDym0s/AAAAAAAAAAI/AAAAAAAAybA/CKaKySTSGPc/photo.jpg" alt="google" height="200" width="400"></a>
+<a href="https://www.google.com.mx/"><img src="https://lh4.googleusercontent.com/-zPIR8GDym0s/AAAAAAAAAAI/AAAAAAAAybA/CKaKySTSGPc/photo.jpg" alt="google" height="200" width="400"></a>
 <br>
-<form action=""height="200" width="400">
- <input type="text"><br>
-</form><br>
+<form action="">
+	<input type="search" name="nombre" placeholder="Buscar">
+</form>
+<br>
 <button>Buscar</button>
 <button>tendre suerte</button>
 </header>
 </center>
-
-
-    </body>
-
-
-
+</body>
 </html>
