--- a/logohtml/google.html
+++ b/logohtml/google.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+</head>
 <body>
 <center>
 <header>
 <a href="https://www.google.com.mx/"><img src="https://lh4.googleusercontent.com/-zPIR8GDym0s/AAAAAAAAAAI/AAAAAAAAybA/CKaKySTSGPc/photo.jpg" alt="google" height="200" width="400"></a>
 <br>
 <form action="">
-	<input type="search" name="nombre" placeholder="Buscar">
+<input type="search" name="nombre" placeholder="Buscar">
 </form>
 <br>
 <button>Buscar</button>
